# vendor_hihope

./: CODEOWNERS  OAT.xml  README_zh.md  tmp.txt
2in1/: config.json  ohos.build
2in1/default_app_config/: BUILD.gn
2in1/etc/: BUILD.gn
2in1/preinstall-config/: BUILD.gn  install_list.json
2in1/resourceschedule/: BUILD.gn
2in1/security_config/: sanitizer_check_list.gni
2in1_core_system/: config.json  ohos.build
2in1_core_system/default_app_config/: BUILD.gn
2in1_core_system/etc/: BUILD.gn
2in1_core_system/preinstall-config/: BUILD.gn  install_list.json
2in1_core_system/resourceschedule/: BUILD.gn
2in1_core_system/security_config/: critical_reboot_process_list.json  high_privilege_process_list.json  sanitizer_check_list.gni
2in1_core_system/window_config/: BUILD.gn
Hi3861/colorfullight_demo/: colorful_light_demo.c
Hi3861/delay_demo/: delay.c
Hi3861/gpioled_demo/: led_example.c
Hi3861/message_demo/: message.c
Hi3861/mutex_demo/: mutex.c
Hi3861/pwmbeer_demo/: pwm_beer_demo.c
Hi3861/pwmbeermusic_demo/: beeper_music_demo.c
Hi3861/pwmled_demo/: pwm_led_demo.c
Hi3861/tcpclient_demo/: demo_entry_cmsis.c
Hi3861/time_demo/: timer.c
Hi3861/wificonnect_demo/: wifi_connect_demo.c
Hi3861/wifihotspot_demo/: wifi_hotspot_demo.c
dayu210/: config.json  ohos.build  product.gni
dayu210/audio/: BUILD.gn
dayu210/bluetooth/: BUILD.gn  NOTICE
dayu210/default_app_config/: BUILD.gn
dayu210/etc/: BUILD.gn
dayu210/hdf_config/uhdf/: BUILD.gn  device_info.hcs  usb_ecm_acm.hcs
dayu210/hdf_config/uhdf/camera/hdi_impl/: camera_host_config.hcs
dayu210/hdf_config/uhdf/camera/pipeline_core/: config.hcs
dayu210/hdf_config/uhdf/media_codec/: codec_component_capabilities.hcs  codec_image_capabilities.hcs
dayu210/image_conf/: BUILD.gn
dayu210/preinstall-config/: BUILD.gn  install_list.json  install_list_capability.json  install_list_permissions.json  uninstall_list.json
dayu210/resourceschedule/: BUILD.gn
dayu210/security_config/: critical_reboot_process_list.json  high_privilege_process_list.json  sanitizer_check_list.gni
dayu210/window_config/: BUILD.gn
dayu300/: README.md  bundle.json  config.json  product.gni
dayu300/bluetooth/: BUILD.gn
dayu300/etc/: BUILD.gn
dayu300/hals/audio/: BUILD.gn  alsa_adapter.json  alsa_paths.json  product.gni
dayu300/hals/audio/config/: audio_policy_config.xml
dayu300/hdf_config/uhdf/: BUILD.gn  device_info.hcs  hdf.hcs  media_codec_capabilities_ftv310.hcs
dayu300/preinstall-config/: BUILD.gn  install_list_permissions.json
dayu300/resourceschedule/: BUILD.gn
dayu300/security_config/: critical_reboot_process_list.json
dayu300/window_config/: BUILD.gn  display_manager_config.xml  window_manager_config.xml
default/: config.json  ohos.build
default/bluetooth/: BUILD.gn
default/default_app_config/: BUILD.gn
default/etc/: BUILD.gn
default/preinstall-config/: BUILD.gn
default_core_system/: config.json  ohos.build
ipcamera/: config.json  ohos.build
ipcamera_core_system/: config.json  ohos.build
nearlink_dk_3863/: BUILD.gn  config.json  ohos.build
nearlink_dk_3863/ws63_sample/19_ble_uart/: BUILD.gn  README.md  ble_uart_client.c  ble_uart_client.h  ble_uart_client_scan.c  ble_uart_client_scan.h  ble_uart_server.c  ble_uart_server.h  ble_uart_server_adv.c  ble_uart_server_adv.h
nearlink_dk_3863/ws63_sample/21_mqtt_led/: BUILD.gn  README.md  mqtt_led_demo.c
nearlink_dk_3863/ws63_sample/26_sle_gas/: BUILD.gn  README.md  sle_uart_client.c  sle_uart_server.c  sle_uart_server_adv.c
nearlink_dk_3863/ws63_sample/26_sle_gas/adc_driver/替换3/adc/: hal_adc.h
nearlink_dk_3863/ws63_sample/26_sle_gas/adc_driver/替换3/adc/v154/: hal_adc_v154.c  hal_adc_v154.h  hal_adc_v154_regs_def.h  hal_adc_v154_regs_op.c  hal_adc_v154_regs_op.h
nearlink_dk_3863/ws63_sample/26_sle_gas/adc_driver/替换4/: adc.h
nearlink_dk_3863/ws63_sample/26_sle_gas/pwm_patch/: hal_iot_pwm.c
nearlink_dk_3863/ws63_sample/paho_mqtt/MQTTClient-C/src/: BUILD.gn  MQTTClient.c  MQTTClient.h
nearlink_dk_3863/ws63_sample/paho_mqtt/MQTTClient-C/src/FreeRTOS/: MQTTFreeRTOS.c  MQTTFreeRTOS.h
nearlink_dk_3863/ws63_sample/paho_mqtt/MQTTClient-C/src/cc3200/: MQTTCC3200.c  MQTTCC3200.h
nearlink_dk_3863/ws63_sample/paho_mqtt/MQTTClient-C/src/linux/: MQTTLinux.c  MQTTLinux.h
nearlink_dk_3863/ws63_sample/paho_mqtt/MQTTClient-C/src/ohos/: mqtt_ohos.h  mqtt_ohos_cmsis.c  mqtt_ohos_posix.c
nearlink_dk_3863/ws63_sample/paho_mqtt/MQTTClient/samples/linux/: CMakeLists.txt  build.sh  hello.cpp  main.cpp  stdoutsub.cpp
nearlink_dk_3863/ws63_sample/paho_mqtt/MQTTPacket/src/: BUILD.gn  MQTTConnect.h  MQTTConnectClient.c  MQTTConnectServer.c  MQTTDeserializePublish.c  MQTTFormat.c  MQTTFormat.h  MQTTPacket.c  MQTTPacket.h  MQTTPublish.h  MQTTSerializePublish.c  MQTTSubscribe.h  MQTTSubscribeClient.c  MQTTSubscribeServer.c  MQTTUnsubscribe.h  MQTTUnsubscribeClient.c  MQTTUnsubscribeServer.c  StackTrace.h
nearlink_dk_3863/ws63_sample/paho_mqtt_change/MQTTClient-C/samples/ohos/: BUILD.gn  hal_wifiiot_errno.h  mqtt_test_cmsis.c  mqtt_test_posix.c
nearlink_dk_3863_xts/: BUILD.gn  config.json  ohos.build
nearlink_dk_3863_xts_minimal/: BUILD.gn  README.md  config.json  config_patch.py  ohos.build
nearlink_dk_3863_xts_minimal/wraps/: BUILD.gn  at_custom_cmd.c  broadcast_stub.c  stub_impl.c
neptune100/: BUILD.gn  config.json  ohos.build
neptune_iotlink_demo/: BUILD.gn  config.json  ohos.build
pc_mini_system/: BUILD.gn  config.json  ohos.build
phone_mini_system/: BUILD.gn  config.json  ohos.build
rk3568/: config.json  ohos.build
rk3568/demo/led_rgb/apps/led_rgb/: BUILD.gn  led_rgb.c
rk3568/security_config/: critical_reboot_process_list.json  high_privilege_process_list.json  sanitizer_check_list.gni
rk3568_mini_system/: BUILD.gn  config.json  ohos.build
rk3568_plus/: config.json  ohos.build
tablet_core_system/: config.json  ohos.build
tablet_mini_system/: BUILD.gn  config.json  ohos.build  product.gni
tv/: config.json  ohos.build
wearable/: config.json  ohos.build
zh_test_product/: config.json  ohos.build
(+528 files in other folders)
