# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("nearlink_dk_3863_xts_minimal") {
    deps = [
        "wraps:product",
        ":copy_config_to_sdk"
    ]
}




# 构建时拷贝 config_patch.py 到 SDK 目录
copy("copy_config_to_sdk") {
    sources = [ "config_patch.py" ]
    outputs = [ 
        "$root_build_dir/../../../device/soc/hisilicon/ws63v100/sdk/build/config/target_config/ws63/config_patch_nearlink.py"
    ]
}
